2008-11-11  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (qtdemux_tag_add_tmpo),
	(qtdemux_tag_add_covr), (qtdemux_parse_udta):
	* gst/qtdemux/qtdemux_fourcc.h:
	* gst/qtdemux/qtdemux_types.c:
	Add cover and alternative copyright tag, and enhance some existing
	ones by marking them as container atoms.

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtpg729pay.c: (gst_rtp_g729_pay_set_caps):
	Don't ignore the return value of setcaps.

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete <tester at tester dot ca>

	* gst/rtp/gstrtpg729pay.c: (gst_rtp_g729_pay_base_init),
	(gst_rtp_g729_pay_class_init), (gst_rtp_g729_pay_init),
	(gst_rtp_g729_pay_set_caps), (gst_rtp_g729_pay_handle_buffer):
	* gst/rtp/gstrtpg729pay.h:
	Replace G729 payloader with an improved version. Fixes #532409.

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_create_transports_string),
	(gst_rtspsrc_change_state):
	Only send one transport at a time for improved compatibility with some
	broken servers. See #537832.

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_do_seek),
	(gst_rtspsrc_perform_seek):
	Only pause/play in the seek handler when the source was playing.
	Fixes #529379.

2008-11-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/matroska/matroska-mux.c:
	(gst_matroska_mux_handle_dirac_packet):
	Fix muxing of Dirac streams if the input already has the format
	we need, i.e. is the output of matroskademux.

2008-11-11  Stefan Kost  <ensonic@users.sf.net>

	* gst/avi/gstavimux.c:
	  Don't segfault on string typed tags being NULL. Fixes #560155.

2008-11-10  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/matroska/matroska-mux.c: (aac_codec_data_to_codec_id),
	(gst_matroska_mux_audio_pad_setcaps):
	Fix mapping AAC profile to Matroska codec id.
