@@ -89,6 +89,7 @@ struct _GstQTDemux {
   /* configured playback region */
   GstSegment segment;
   gboolean segment_running;
+  GstEvent *pending_newsegment;
 };
 
 struct _GstQTDemuxClass {
